<?xml version="1.0"?>
<package>
	<name>urbinn</name>
  	<version>0.0.0</version>
	<description>The beginner_tutorials package</description>	
	<maintainer email="test@test.nl">test</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>message_generation</run_depend>
	<run_depend>message_runtime</run_depend>
</package>
